--- a/frontend/service/components/signup/signup.html
+++ b/frontend/service/components/signup/signup.html
@@ -6,19 +6,19 @@
         <form id="register-form">
             <div class="mb-3">
                 <label for="new-username" class="form-label ctm-text-light">Username</label>
-                <input type="text" class="form-control ctm-form" id="new-username" required autocomplete="username">
+                <input type="text" class="form-control ctm-form" id="new-username" required autocomplete="username" maxlength="100">
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label ctm-text-light">Email</label>
-                <input type="email" class="form-control ctm-form" id="email" required autocomplete="email">
+                <input type="email" class="form-control ctm-form" id="email" required autocomplete="email" maxlength="100">
             </div>
             <div class="mb-3">
                 <label for="new-password" class="form-label ctm-text-light">Password</label>
-                <input type="password" class="password-field form-control ctm-form" id="new-password" required autocomplete="new-password">
+                <input type="password" class="password-field form-control ctm-form" id="new-password" required autocomplete="new-password" maxlength="100">
             </div>
             <div class="mb-3">
                 <label for="confirm-password" class="form-label ctm-text-light">Confirm Password</label>
-                <input type="password" class="form-control ctm-form password-field" id="confirm-password" required autocomplete="new-password">
+                <input type="password" class="form-control ctm-form password-field" id="confirm-password" required autocomplete="new-password" maxlength="100">
             </div>
             <div class="d-flex justify-content-center">
                 <button type="submit" class="btn ctm-btn" id="register">Register</button>
