--- a/frontend/service/components/tournament/new-tournament.html
+++ b/frontend/service/components/tournament/new-tournament.html
@@ -5,7 +5,7 @@
 		<form id="tournament-form">
 			<div class="mb-3">
 				<label for="tournament-name-input" class="form-label">Tournament's name</label>
-				<input type="text" class="form-control ctm-form" id="tournament-name-input" name="tournament-name" placeholder="Where the hell have you been loca" required>
+				<input type="text" class="form-control ctm-form" id="tournament-name-input" name="tournament-name" placeholder="Where the hell have you been loca" required maxlength="50">
 			</div>
 			<div class="mb-3 d-flex flex-column align-items-center">
 				<label for="tournament-participants" class="form-label ctm-text-title">Participants</label>
